--- a/content/modules/ROOT/pages/17_trilio_backup.adoc
+++ b/content/modules/ROOT/pages/17_trilio_backup.adoc
@@ -105,16 +105,16 @@ image::Trilio/tvkinstance.PNG[]
 +
 image::Trilio/targetCreateNew.PNG[]
 +
-. On the Create Target pop-up window, enter the following information:
+. On the _Create Target_ pop-up window, enter the following information:
 * Namespace
 * Threshold Capacity
 * Vendor Details - select ObjectStore 
 * Vendor - Other
-* Bucket Name - from the OCP GUI, select *Storage*, *Object Storage*, *ObjectBucketClaims*, select the *trilio-bucket*.  Scroll to the bottom and use the copy features for the _Bucket Name_ field and paste it to the _Bucket Name_ field in the _Create Target_ field.
+* Bucket Name - from the _OpenShift Console GUI_, select *Storage*, *Object Storage*, *ObjectBucketClaims*, select the *trilio-bucket*.  Scroll to the bottom and use the copy features for the _Bucket Name_ field and paste it to the _Bucket Name_ field.
 * Region - us-east-1
 * URL - from the OCP GUI, select *Networking*, *Routes*, filter on _S3_. Copy the S3 route to the clipboard and paste the value to the _URL_ field.
 * Skip Certificate Verification - enabled
-* Object store credentials - from the OCP GUI, select Storage, Object Storage, ObjectBucketClaims, select the trilio-bucket.  Scroll to the bottom and use the copy features for the AWS Access Key and Secret Key to copy and paste them in the appropriate fields on the Create Secret dialog window.
+* Object store credentials - from the _OpenShift Console GUI_, select *Storage*, *Object Storage*, *ObjectBucketClaims*, select the *trilio-bucket*.  Scroll to the bottom and use the copy features for the AWS Access Key and Secret Key to copy and paste them in the appropriate fields in the _Create Secret_ dialog window.
 * Enable Browsing - enabled
 +
 image::Trilio/createtarget.PNG[]
@@ -127,7 +127,7 @@ image::Trilio/triliobuckettarget.PNG[]
 +
 . The target will initially be in an `InProgress` state.  After a few minutes, the target should be in an `Available` state.  Scroll to the right to see the _Status_ field.
 +
-image::Trilio/InProgress.PNG[]
+image::Trilio/availableStatus.PNG[]
 
 
 === NameSpace Backups 
