--- a/content/modules/ROOT/pages/00_introductions.adoc
+++ b/content/modules/ROOT/pages/00_introductions.adoc
@@ -115,10 +115,10 @@ image::introductions/trilio-rodolfo.jpg[]
 ** Migration Toolkit for Virtualization
 ** VM Deployments
 ** VM Networking
+** Storage
 ** Backup and Recovery
 ** Presales, Discovery Sessions, 
 ** Virtualization Migration Assessment
-** Backup and Recovery
 
 == OCP and Virt
 ** Why switch from a traditional VM platform?
@@ -140,11 +140,9 @@ link:http://demo.redhat.com[Openshift Virtualization Roadshow]
 
 link:https://role.rhu.redhat.com/rol-rhu/app/catalog?q=do316[ROLE DO316]
 
-link:https://github.com/emcon33/Virtualization-on-ROSA[OpenShift on ROSA]
-
 link:https://red.ht/virtkit[Content Kit]
 
-link:https://catalog.redhat.com/platform/red-hat-openshift/virtualization[Certified Partners list]
+link:https://catalog.redhat.com/platform/red-hat-openshift/virtualization#virtualization-infrastructure[Certified Partners list]
 
 link:https://source.redhat.com/departments/sales/globalservices/virtualization[OCP-Virtualization Enablement Global Page]
 
@@ -154,11 +152,11 @@ link:https://portfoliohub.redhat.com/v3/serviceskit/openshift_virt_pov[OpenShift
 
 link:https://portfoliohub.redhat.com/v3/servicesmap/openshift_virt[Pre-Sales Virt]
 
-link:https://docs.google.com/document/d/177hXVSm1hSwG4tvCQ_jx1Cg2RwSjTe4yMVqLx0k17_U/edit?usp=sharing[Virtualization Migration Assessment Delivery Guide]
+link:https://docs.google.com/document/d/1oEWi2mTBG1kh7DfO-6T5nG553uYsMov6eURnN2X7FII/edit[Virtualization Migration Assessment Delivery Guide](Make a Copy per team)
 
 link:https://docs.google.com/document/d/1-sm-mjAyYezDGd0ZgbjZFcur8Tf1J2vezHNBVGYwb68/edit?usp=sharing[Technical OpenShift Virt Discovery Questions]
 
-link:https://docs.google.com/spreadsheets/d/1i7e57sZVfju87Zw32lyyv1cWLN0fvP5FJW2qZlVMwoE/edit#gid=0[Resource Master]
+link:https://docs.google.com/document/d/1Ott_jBym2bsSqbbQJLydsZ1roxp8uhvnCAURG_N6EZU/edit#heading=h.c2zjxma4p7re[Virtualization Migration Assessment & HLD]
 
 == Getting there with your friends
 
